--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ Email: lyou@seu.edu.cn <br />
 <p>Li You (Senior Member, IEEE) received the B.E. and M.E. degrees from the Nanjing University of Aeronautics and Astronautics, Nanjing, China, in 2009 and 2012, respectively, and the Ph.D. degree from Southeast University, Nanjing, in 2016, all in electrical engineering.</p>
 <p>From 2014 to 2015, he has conducted a Visiting Research at the Center for Pervasive Communications and Computing, University of California Irvine, Irvine, CA, USA. Since 2016, he has been with the Faculty of the National Mobile Communications Research Laboratory, Southeast University. His research interests lie in the general areas of communications, signal processing, and information theory, with the current emphasis on massive MIMO and XL-MIMO communications.</p>
 <p>Dr. You received the National Excellent Doctoral Dissertation Award from the China Institute of Communications (CIC) in 2017, the Young Elite Scientists Sponsorship Program (2019–2021) by the China Association for Science and Technology (CAST), the URSI Young Scientist Award in 2021, the National Natural Science Foundation of China for Outstanding Young Scholars in 2023, and the First Prize of Science and Technology Award of China Institute of Communications in Year 2023. He served as the Wireless Communications Symposium Co-Chair of IEEE ICC 2023 and the Satellite Communications Symposium Co-Chair of IEEE WCSP 2022. He is currently on the editorial board of IEEE Signal Processing Letters. <br /><br /></p>
-<p>尤力，东南大学教授，博士生导师，国家优青。2009年及2012年于南京航空航天大学电子工程系分别获得学士及硕士学位，2016年于东南大学移动通信国家重点实验室获得博士学位，其后留校任教，曾赴美国加州大学欧文分校开展合作研究。</p>
-<p>当前研究方向主要包括:<span class="statement"><b>大规模/超大规模MIMO无线通信、空天地海一体化无线通信、智能通信等</b></span>。近年来承担和参与国家自然科学基金、国家重点研发计划、江苏省前沿引领技术基础研究专项以及华为合作框架等多个项目。相关研究成果在IEEE JSAC等期刊及IEEE ICC等会议发表论文100余篇，出版专著“大规模MIMO无线通信”，入选“十三五”国家重大出版工程规划。获授权国家发明专利60余项。担任IEEE Signal Processing Letters编委，担任IEEE ICC 2023 Wireless Communications Symposium以及IEEE WCSP 2022 Satellite Communications Symposium共同主席。获2023年度中国通信学会科学技术奖一等奖，2023年度国家优秀青年科学基金，2021年度国际无线电科学联盟（URSI）青年科学家奖， 入选2020年度中国科协青年人才托举工程， 获2017年度中国通信学会优秀博士学位论文。</p>
+<p>尤力，东南大学教授，青年首席教授，博士生导师，国家优青。2009年及2012年于南京航空航天大学电子工程系分别获得学士及硕士学位，2016年于东南大学移动通信全国重点实验室获得博士学位，其后留校任教，曾赴美国加州大学欧文分校开展合作研究。</p>
+<p>当前研究方向主要包括:<span class="statement"><b>大规模/超大规模MIMO无线通信、空天地海一体化无线通信、智能通信等</b></span>。近年来承担和参与国家自然科学基金、国家重点研发计划、江苏省前沿引领技术基础研究专项以及华为合作框架等多个项目。相关研究成果在IEEE JSAC等期刊及IEEE ICC等会议发表论文100余篇，出版专著“大规模MIMO无线通信”，入选“十三五”国家重大出版工程规划。获授权发明专利70余项。担任IEEE Signal Processing Letters编委，担任IEEE ICC 2023 Wireless Communications Symposium以及IEEE WCSP 2022 Satellite Communications Symposium共同主席。获2023年度中国通信学会科学技术奖一等奖，2023年度国家优秀青年科学基金，2021年度国际无线电科学联盟（URSI）青年科学家奖， 入选2020年度中国科协青年人才托举工程， 获2017年度中国通信学会优秀博士学位论文。</p>
 <h2>Education </h2>
 <ul>
 <li><p><b>Ph.D.</b>, Electronic Engineering, <a href="https://www.seu.edu.cn/">Southeast University</a>, China, September 2016.</p>
@@ -145,7 +145,7 @@ Email: lyou@seu.edu.cn <br />
 <h2>Teaching</h2>
 <ul>
 <li><p>Digital Signal Processing (National Excellent Course), Undergraduate Level.<br />
-数字信号处理（国家精品课程），本科</p>
+<a href="https://www.icourse163.org/course/SEU-1001754347">数字信号处理（国家精品课程）</a>，本科</p>
 </li>
 <li><p>Principles and Methods of Simulation for Mobile Communication Systems, Master's Level.<br />
 移动通信系统仿真原理与方法，硕士</p>
@@ -155,7 +155,7 @@ Email: lyou@seu.edu.cn <br />
 </li>
 </ul>
 <h2>Recruitment</h2>
-<p>课题组遵循因材施教的培养原则，根据学生的兴趣指导学生参与相应的工作，强调理论方法的研究深度和高度，注重对研究生实践能力的培养。所指导的研究生及本科生在国际权威期刊及会议上发表论文多篇，获得国家奖学金、中国通信学会硕士学位论文激励计划、江苏省优秀硕士专业学位论文、研究生电子设计竞赛全国二等奖等多项奖励与荣誉。毕业研究生就业去向包括华为、中兴等龙头企业，中电科、航天科工、国家电网等大型国企。</p>
+<p>课题组遵循因材施教的培养原则，根据学生的兴趣指导学生参与相应的工作，强调理论方法的研究深度和高度，注重对研究生实践能力的培养。课题组与国际名校保持密切合作，为优秀学生提供参加国际会议及联合培养等交流机会。所指导的研究生及本科生在国际权威期刊及会议上发表论文多篇，获得国家奖学金、中国通信学会优秀硕士学位论文、江苏省优秀硕士专业学位论文、研究生电子设计竞赛全国二等奖等多项奖励与荣誉。毕业研究生就业去向包括通信领域龙头企业，中电科、航天科工、国家电网等大型国企。</p>
 <div class="infoblock">
 <div class="blockcontent">
 <p>每年可招收博士生<span class="statement">1-2</span>名，硕士生<span class="statement">5</span>名，欢迎对相关研究领域有浓厚兴趣的同学联系攻读博士、硕士研究生。欢迎优秀本科同学加入课题组参与各类竞赛及SRTP项目。</p>
