--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Email: lyou@seu.edu.cn <br />
 <li><p>Principles and Methods of Simulation for Mobile Communication Systems, Master's Level.<br />
 移动通信系统仿真原理与方法，硕士</p>
 </li>
-<li><p>Spatial Wireless Communication, Doctorate Level.<br />
+<li><p>Space-Time Wireless Communications, Doctorate Level.<br />
 空时无线通信，博士</p>
 </li>
 </ul>
