--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2024.10</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite integrated communication and localization systems was accepted by IEEE Communications Letters. (朱永祥的关于大规模MIMO低轨卫星通信定位一体化传输的论文被 IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10741194">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2024.09</span>]  Li You was listed in the 2024 Stanford's list of World Top 2% scientists. (尤力入选2024年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/uhGpPc3eZL7XN2aHzGgW7A">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.09</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite localization systems was accepted by IEEE Transactions on Vehicular Technology. (朱永祥的关于大规模MIMO低轨卫星定位的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10695037">[link]</a></p>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.03</span>]  Our work on integrated sensing and communications for massive MIMO LEO satellite systems was accepted by IEEE Internet of Things Magazine. (课题组关于大规模MIMO低轨卫星通信感知一体化传输的论文被IEEE Internet of Things Magazine录用) <a href="https://ieeexplore.ieee.org/document/10574260">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2024.03</span>]  Our work on integrated communications and localization for massive MIMO LEO satellite systems was accepted by IEEE Transactions on Wireless Communications. (课题组关于大规模MIMO低轨卫星通信定位一体化传输的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10478820">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2024.03</span>]  Our work on integrated communications and localization for massive MIMO LEO satellite systems was accepted by IEEE Transactions on Wireless Communications. (课题组关于大规模MIMO低轨卫星通信定位一体化传输的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10478820">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2024.03</span>]  Xiang Xiao's paper on satellite communications was accepted by Science China Information Sciences. (肖翔的关于卫星通信的论文被Science China Information Sciences录用) <a href="https://link.springer.com/article/10.1007/s11432-023-3969-4?utm_source=rct_congratemailt&amp;utm_medium=email&amp;utm_campaign=nonoa_20240528&amp;utm_content=10.1007%2Fs11432-023-3969-4">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.01</span>]  Kelin Huang's paper on DMA was accepted by IEEE Wireless Communications Letters. (黄珂琳的关于动态超表面天线的论文被IEEE Wireless Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10415645">[link]</a></p>
