--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2024.12</span>]  Two papers were accepted by IEEE WCNC 2025. (课题组2篇论文被2025 IEEE WCNC会议录用)</p>
+</li>
 <li><p>[<span class="statement">2024.11</span>]  姜涵予获江苏省优秀硕士学术学位论文
 </li>
 <li><p>[<span class="statement">2024.11</span>]  祝贺叶育琦获国家奖学金，谢晨洁获至善奖学金，黄珂琳获小米奖学金（特等），孔庆付获联想研究院奖学金，徐泽野获校长奖学金
 </li>
-<li><p>[<span class="statement">2024.11</span>]  Zhenzhou Jin's paper on channel knowledge map construction was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用)
+<li><p>[<span class="statement">2024.11</span>]  Zhenzhou Jin's paper on channel fingerprint construction was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用)
 </li>
 <li><p>[<span class="statement">2024.10</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite integrated communication and localization systems was accepted by IEEE Communications Letters. (朱永祥的关于大规模MIMO低轨卫星通信定位一体化传输的论文被 IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10741194">[link]</a></p>
 </li>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Wireless Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10612761">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2024.05</span>]  Yan Huang's paper on satellite communications was accepted by Space: Science &amp; Technology. (黄彦的关于卫星通信的论文被Space: Science &amp; Technology录用) <a href="https://spj.science.org/doi/10.34133/space.0178">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2024.05</span>]  Yan Huang's paper on satellite communications was accepted by Space: Science &amp; Technology. (黄彦的关于卫星通信的论文被Space: Science &amp; Technology录用) <a href="https://spj.science.org/doi/10.34133/space.0178">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2024.04</span>]  Li You was appointed as the Associate Editor of IEEE Signal Processing Letters. (尤力担任IEEE Signal Processing Letters编委)</p>
 </li>
 <li><p>[<span class="statement">2024.04</span>]  Jie Xu's paper on XL-MIMO was accepted by IEEE Transactions on Wireless Communications. (徐洁的关于超大规模MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10505154">[link]</a></p>
