--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.11</span>]  祝贺叶育琦获国家奖学金，谢晨洁获至善奖学金，黄珂琳获小米奖学金（特等），孔庆付获联想研究院奖学金，徐泽野获校长奖学金
 </li>
-<li><p>[<span class="statement">2024.11</span>]  Zhenzhou Jin's paper on channel fingerprint construction was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用)
+<li><p>[<span class="statement">2024.11</span>]  Zhenzhou Jin's paper on channel fingerprint construction was accepted by IEEE Transactions on Wireless Communications. (金振洲的关于信道图谱的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10791446">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.10</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite integrated communication and localization systems was accepted by IEEE Communications Letters. (朱永祥的关于大规模MIMO低轨卫星通信定位一体化传输的论文被 IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10741194">[link]</a></p>
 </li>
