--- a/publications.html
+++ b/publications.html
@@ -27,21 +27,24 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P7] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
+<li><p>[P6] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
 </li>
-<li><p>[P6] Z. Jin, <b>L. You*</b>, J. Wang, X.-G. Xia, and X. Q. Gao, “An I2I inpainting approach for efficient channel knowledge map construction,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10791446">Full Paper</a>]</p>
+<li><p>[P5] Z. Jin, <b>L. You*</b>, J. Wang, X.-G. Xia, and X. Q. Gao, “An I2I inpainting approach for efficient channel knowledge map construction,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10791446">Full Paper</a>]</p>
 </li>
-<li><p>[P5] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, X. Q. Gao*, and X.-G. Xia, “Precoder design for user-centric network massive MIMO with matrix manifold optimization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2024.</p>
+<li><p>[P4] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, X. Q. Gao*, and X.-G. Xia, “Precoder design for user-centric network massive MIMO with matrix manifold optimization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2024.</p>
 </li>
-<li><p>[P4] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Massive MIMO-OFDM channel acquisition with time-frequency phase-shifted pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10769510">Full Paper</a>]</p>
-</li>
-<li><p>[P3] Y. Zhu, <b>L. You*</b>, H. Zhou, Z. Jin, Q. Kong, and X. Q. Gao, “Robust precoding for massive MIMO LEO satellite integrated communication and localization systems,” <b><i>IEEE Communications Letters</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10741194">Full Paper</a>]</p>
+<li><p>[P3] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Massive MIMO-OFDM channel acquisition with time-frequency phase-shifted pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10769510">Full Paper</a>]</p>
 </li>
 <li><p>[P2] Y. Zhu, <b>L. You*</b>, Q. Kong, G. Seco-Granados, and X. Q. Gao, “Robust precoding for massive MIMO LEO satellite localization systems,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10695037">Full Paper</a>]</p>
 </li>
 <li><p>[P1] H. Che, <b>L. You*</b>, J. Wang, and X. Q. Gao, “Non-orthogonal pilot design exploiting spatial non-stationarity for TDD XL-MIMO transmission,” <b><i>IEEE Transactions on Vehicular Technology</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10693363/">Full Paper</a>]</p>
 </li>
 </ul>
+<h4>Year 2024</h4>
+<ul>
+<li><p>[J78] Y. Zhu, <b>L. You*</b>, H. Zhou, Z. Jin, Q. Kong, and X. Q. Gao, “Robust precoding for massive MIMO LEO satellite integrated communication and localization systems,” <b><i>IEEE Communications Letters</i></b>, vol. 29, no. 1, pp. 21-25, Jan. 2025. [<a href="https://ieeexplore.ieee.org/document/10741194">Full Paper</a>]</p>
+</li>
+</ul>  
 <h4>Year 2024</h4>
 <ul>
 <li><p>[J77] Y. Huang, <b>L. You*</b>, K. Z. Wang, and X. Q. Gao, “QoS-aware precoding for dual-polarized downlink massive MIMO LEO satellite communications,” <b><i>Space: Science &amp; Technology</i></b>, vol. 4, Article ID: 0178, Nov. 2024. [<a href="https://spj.science.org/doi/10.34133/space.0178">Full Paper</a>]</p>
@@ -220,6 +223,8 @@
 <h2>Conference</h2>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[C49] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Near-field multi-user holographic MIMO communications over Ricean fading channels,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
+</li>
 <li><p>[C48] X. Guo, Q. Liu*, S. Wang, and <b>L. You*</b>, “Stochastic geometry-based MCS adaption analysis for uplink cellular networks,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
 </li>
 <li><p>[C47] H. Zhou, X. Gong, C. G. Tsinos, <b>L. You*</b>, X. Gao, and B. Ottersten, “GNN-enabled deep unfolding for precoding in massive MIMO LEO satellite communications,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
