--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.01</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE WCNC workshop 2025. (潜梦羽的关于全息MIMO的论文被2025 IEEE WCNC workshop录用)</p>
+</li>
 <li><p>[<span class="statement">2024.12</span>]  Two papers were accepted by IEEE WCNC 2025. (课题组2篇论文被2025 IEEE WCNC会议录用)</p>
 </li>
 <li><p>[<span class="statement">2024.11</span>]  姜涵予获江苏省优秀硕士学术学位论文
@@ -71,7 +73,7 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.10</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite integrated communication and localization systems was accepted by IEEE Communications Letters. (朱永祥的关于大规模MIMO低轨卫星通信定位一体化传输的论文被 IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10741194">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2024.09</span>]  Li You was listed in the 2024 Stanford's list of World Top 2% scientists. (尤力入选2024年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/uhGpPc3eZL7XN2aHzGgW7A">[link]</a></p>
+<li><p>[<span class="statement">2024.09</span>]  Li You was listed in the 2024 Stanford's list of World Top 2% scientists. (尤力老师入选2024年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/uhGpPc3eZL7XN2aHzGgW7A">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.09</span>]  Yongxiang Zhu's paper on massive MIMO LEO satellite localization systems was accepted by IEEE Transactions on Vehicular Technology. (朱永祥的关于大规模MIMO低轨卫星定位的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10695037">[link]</a></p>
 </li>
@@ -79,16 +81,16 @@ Email: lyou@seu.edu.cn <br />
 </li> 
 <li><p>[<span class="statement">2024.07</span>]  Five papers were accepted by IEEE GLOBECOM 2024. (课题组5篇论文被2024 IEEE GLOBECOM会议录用)</p>
 </li>
-<li><p>[<span class="statement">2024.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Wireless Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10612761">[link]</a></p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2024.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Wireless Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10612761">[link]</a></p>
+</li>
 <li><p>[<span class="statement">2024.05</span>]  Yan Huang's paper on satellite communications was accepted by Space: Science &amp; Technology. (黄彦的关于卫星通信的论文被Space: Science &amp; Technology录用) <a href="https://spj.science.org/doi/10.34133/space.0178">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2024.04</span>]  Li You was appointed as the Associate Editor of IEEE Signal Processing Letters. (尤力担任IEEE Signal Processing Letters编委)</p>
+<li><p>[<span class="statement">2024.04</span>]  Li You was appointed as the Associate Editor of IEEE Signal Processing Letters. (尤力老师担任IEEE Signal Processing Letters编委)</p>
 </li>
 <li><p>[<span class="statement">2024.04</span>]  Jie Xu's paper on XL-MIMO was accepted by IEEE Transactions on Wireless Communications. (徐洁的关于超大规模MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10505154">[link]</a></p>
 </li>
@@ -106,7 +108,7 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2023.11</span>]  Yuqi Ye's paper on fluid antenna was accepted by IEEE Communications Letters. (叶育琦的关于流体天线的论文被IEEE Communications Letters录用) <a href="https://ieeexplore.ieee.org/document/10328751">[link]</a></p>
 </li>
-<li><p>[<span class="statement">2023.11</span>]  Li You was listed in the 2023 Stanford's list of World Top 2% scientists. (尤力入选2023年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/N5jBnNoLbPmm8a6eNJGszw">[link]</a></p>
+<li><p>[<span class="statement">2023.11</span>]  Li You was listed in the 2023 Stanford's list of World Top 2% scientists. (尤力老师入选2023年度斯坦福全球前2%顶尖科学家) <a href="https://mp.weixin.qq.com/s/N5jBnNoLbPmm8a6eNJGszw">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2023.08</span>]  Yuqi Ye and 5 other students won the second prize in the 18th China Graduate Electronic Design Competition National Finals. (叶育琦等6名同学获得第18届中国研究生电子设计竞赛全国总决赛二等奖) <a href="https://mp.weixin.qq.com/s/ih0IFUNk2buOt58cOqQJQQ">[link]</a></p>
 </li>
