--- a/patents.html
+++ b/patents.html
@@ -165,6 +165,8 @@
 </ul>
 <h3>外国专利</h3>
 <ul>
+<li><p>[5] “NEAR-FIELD BROADBAND UPLINK MIMO TRANSMISSION METHOD ASSISTED BY DYNAMIC METASURFACE ANTENNA”, 发明专利, 美国, US12206469B2</p>
+</li>
 <li><p>[4] “LARGE-SCALE MIMO SATELLITE MOBILE COMMUNICATION METHOD AND SYSTEM”, 发明专利, 美国, US11831393B2</p>
 </li>
 <li><p>[3] “LARGE-SCALE MIMO WIRELESS TRANSMISSION METHOD FOR MILLIMETER WAVE/TERAHERTZ NETWORKS”, 发明专利, 美国, US11419068B2</p>
