--- a/publications.html
+++ b/publications.html
@@ -27,11 +27,9 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P6] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
+<li><p>[P5] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
 </li>
-<li><p>[P5] Z. Jin, <b>L. You*</b>, J. Wang, X.-G. Xia, and X. Q. Gao, “An I2I inpainting approach for efficient channel knowledge map construction,” <b><i>IEEE Transactions on Wireless Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10791446">Full Paper</a>]</p>
-</li>
-<li><p>[P4] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, X. Q. Gao*, and X.-G. Xia, “Precoder design for user-centric network massive MIMO with matrix manifold optimization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2024.</p>
+<li><p>[P4] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, X. Q. Gao*, and X.-G. Xia, “Precoder design for user-centric network massive MIMO with matrix manifold optimization,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10886952">Full Paper</a>]</p>
 </li>
 <li><p>[P3] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Massive MIMO-OFDM channel acquisition with time-frequency phase-shifted pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10769510">Full Paper</a>]</p>
 </li>
@@ -42,6 +40,8 @@
 </ul>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[J79] Z. Jin, <b>L. You*</b>, J. Wang, X.-G. Xia, and X. Q. Gao, “An I2I inpainting approach for efficient channel knowledge map construction,” <b><i>IEEE Transactions on Wireless Communications</i></b>, vol. 24, no. 2, pp. 1415-1429, Feb. 2025. [<a href="https://ieeexplore.ieee.org/document/10791446">Full Paper</a>]</p>
+</li>
 <li><p>[J78] Y. Zhu, <b>L. You*</b>, H. Zhou, Z. Jin, Q. Kong, and X. Q. Gao, “Robust precoding for massive MIMO LEO satellite integrated communication and localization systems,” <b><i>IEEE Communications Letters</i></b>, vol. 29, no. 1, pp. 21-25, Jan. 2025. [<a href="https://ieeexplore.ieee.org/document/10741194">Full Paper</a>]</p>
 </li>
 </ul>  
