--- a/publications.html
+++ b/publications.html
@@ -223,6 +223,10 @@
 <h2>Conference</h2>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
+</li>
+<li><p>[C50] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Ultra-grained channel fingerprint construction via conditional generative diffusion models,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
+</li>
 <li><p>[C49] M. Qian, X. Mu, <b>L. You*</b>, and M. Matthaiou, “Near-field multi-user holographic MIMO communications over Ricean fading channels,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
 </li>
 <li><p>[C48] X. Guo, Q. Liu*, S. Wang, and <b>L. You*</b>, “Stochastic geometry-based MCS adaption analysis for uplink cellular networks,” in <b><i>Proc. IEEE WCNC 2025</i></b>, Milan, Italy, Mar. 2025, 1-6.</p>
