--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
+<li><p>[<span class="statement">2025.02</span>]  Two papers were accepted by IEEE INFOCOM workshop 2025. (课题组2篇论文被2025 IEEE INFOCOM workshop录用)</p>
+</li>
 <li><p>[<span class="statement">2025.01</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE WCNC workshop 2025. (潜梦羽的关于全息MIMO的论文被2025 IEEE WCNC workshop录用)</p>
 </li>
 <li><p>[<span class="statement">2024.12</span>]  Two papers were accepted by IEEE WCNC 2025. (课题组2篇论文被2025 IEEE WCNC会议录用)</p>
@@ -79,13 +81,13 @@ Email: lyou@seu.edu.cn <br />
 </li>
 <li><p>[<span class="statement">2024.09</span>]  Haohong Che's paper on XL-MIMO was accepted by IEEE Transactions on Vehicular Technology. (车昊鸿的关于超大规模MIMO的论文被IEEE Transactions on Vehicular Technology录用) <a href="https://ieeexplore.ieee.org/document/10693363/">[link]</a></p>
 </li> 
-<li><p>[<span class="statement">2024.07</span>]  Five papers were accepted by IEEE GLOBECOM 2024. (课题组5篇论文被2024 IEEE GLOBECOM会议录用)</p>
-</li>
 </ul></p>
 <div class="content-container">  
 <div class="toggle-icon" id="toggleIcon"></div> View More Earlier News 
 <div class="toggle-content" id="toggleContent">  
 <p><ul>
+<li><p>[<span class="statement">2024.07</span>]  Five papers were accepted by IEEE GLOBECOM 2024. (课题组5篇论文被2024 IEEE GLOBECOM会议录用)</p>
+</li>
 <li><p>[<span class="statement">2024.07</span>]  Mengyu Qian's paper on holographic MIMO was accepted by IEEE Transactions on Wireless Communications. (潜梦羽的关于全息MIMO的论文被IEEE Transactions on Wireless Communications录用) <a href="https://ieeexplore.ieee.org/document/10612761">[link]</a></p>
 </li>
 <li><p>[<span class="statement">2024.05</span>]  Yan Huang's paper on satellite communications was accepted by Space: Science &amp; Technology. (黄彦的关于卫星通信的论文被Space: Science &amp; Technology录用) <a href="https://spj.science.org/doi/10.34133/space.0178">[link]</a></p>
