--- a/publications.html
+++ b/publications.html
@@ -27,6 +27,8 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
+<li><p>[P3] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, 2025.</p>
+</li>
 <li><p>[P2] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
 </li>
 <li><p>[P1] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Massive MIMO-OFDM channel acquisition with time-frequency phase-shifted pilots,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10769510">Full Paper</a>]</p>
@@ -236,15 +238,15 @@
 </ul>
 <h4>Year 2024</h4>
 <ul>
-<li><p>[C46] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, Z. Xiang, X. Q. Gao*, and  X.-G. Xia, “Matrix manifold precoder design for user-centric network massive MIMO,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6.</p>
+<li><p>[C46] R. Sun, <b>L. You</b>, A.-A. Lu, C. Sun, Z. Xiang, X. Q. Gao*, and  X.-G. Xia, “Matrix manifold precoder design for user-centric network massive MIMO,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901351">Full Paper</a>]</p>
 </li>
-<li><p>[C45] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Time-frequency phase-shifted pilots for massive MIMO-OFDM channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6.</p>
+<li><p>[C45] J. Tang, X. Q. Gao*, <b>L. You</b>, D. Shi, J. Yang, X.-G. Xia, X. Zhao, and P. Jiang, “Time-frequency phase-shifted pilots for massive MIMO-OFDM channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901171">Full Paper</a>]</p>
 </li>
-<li><p>[C44] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Electromagnetic exposure-constrained multiuser MIMO assisted by fluid antenna system,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6.</p>
+<li><p>[C44] Y. Ye, <b>L. You*</b>, H. Xu, A. Elzanaty, K.-K. Wong, and X. Q. Gao, “Electromagnetic exposure-constrained multiuser MIMO assisted by fluid antenna system,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10900984">Full Paper</a>]</p>
 </li>
-<li><p>[C43] M. Qian, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “Holographic planar arrays-assisted multi-user uplink transmission,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6.</p>
+<li><p>[C43] M. Qian, <b>L. You*</b>, X.-G. Xia, and X. Q. Gao, “Holographic planar arrays-assisted multi-user uplink transmission,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901272">Full Paper</a>]</p>
 </li>
-<li><p>[C42] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “A generative denoising approach for near-field XL-MIMO channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6.</p>
+<li><p>[C42] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “A generative denoising approach for near-field XL-MIMO channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901741">Full Paper</a>]</p>
 </li>
 <li><p>[C41] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, and W. K. New, “Power allocation for FAS-assisted downlink communication,” in <b><i>Proc. IEEE MAPE 2024</i></b>, Guangzhou, China, Nov. 2024, 1-4.</p>
 </li>
