--- a/publications.html
+++ b/publications.html
@@ -248,7 +248,7 @@
 </li>
 <li><p>[C42] Z. Jin, <b>L. You*</b>, D. W. K. Ng, X.-G. Xia, and X. Q. Gao, “A generative denoising approach for near-field XL-MIMO channel estimation,” in <b><i>Proc. IEEE GLOBECOM 2024</i></b>, Cape Town, South Africa, Dec. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10901741">Full Paper</a>]</p>
 </li>
-<li><p>[C41] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, and W. K. New, “Power allocation for FAS-assisted downlink communication,” in <b><i>Proc. IEEE MAPE 2024</i></b>, Guangzhou, China, Nov. 2024, 1-4.</p>
+<li><p>[C41] B. Tang, H. Xu, K.-K. Wong, <b>L. You</b>, and W. K. New, “Power allocation for FAS-assisted downlink communication,” in <b><i>Proc. IEEE MAPE 2024</i></b>, Guangzhou, China, Nov. 2024, 1-4. [<a href="https://ieeexplore.ieee.org/document/10924461">Full Paper</a>]</p>
 </li>
 <li><p>[C40] X. Niu, <b>L. You</b>, A.-A. Lu, and X. Q. Gao*, “Precoding design for coordinated multicast and unicast transmission in C-V2V massive MIMO with imperfect CSI,” in <b><i>Proc. IEEE VTC 2024 Spring</i></b>, Singapore, Jun. 2024, 1-6. [<a href="https://ieeexplore.ieee.org/document/10683349">Full Paper</a>]</p>
 </li>
