--- a/patents.html
+++ b/patents.html
@@ -167,15 +167,17 @@
 </ul>
 <h3>外国专利</h3>
 <ul>
-<li><p>[5] “NEAR-FIELD BROADBAND UPLINK MIMO TRANSMISSION METHOD ASSISTED BY DYNAMIC METASURFACE ANTENNA”, 发明专利, 美国, US12206469B2</p>
+<li><p>[6] “TRANSMIT METHOD BASED ON SATELLITE MASSIVE MIMO INTEGRATED SENSING AND COMMUNICATION”, 美国发明专利, 专利号: US12244370B2</p>
 </li>
-<li><p>[4] “LARGE-SCALE MIMO SATELLITE MOBILE COMMUNICATION METHOD AND SYSTEM”, 发明专利, 美国, US11831393B2</p>
+<li><p>[5] “NEAR-FIELD BROADBAND UPLINK MIMO TRANSMISSION METHOD ASSISTED BY DYNAMIC METASURFACE ANTENNA”, 美国发明专利, 专利号: US12206469B2</p>
 </li>
-<li><p>[3] “LARGE-SCALE MIMO WIRELESS TRANSMISSION METHOD FOR MILLIMETER WAVE/TERAHERTZ NETWORKS”, 发明专利, 美国, US11419068B2</p>
+<li><p>[4] “LARGE-SCALE MIMO SATELLITE MOBILE COMMUNICATION METHOD AND SYSTEM”, 美国发明专利, 专利号: US11831393B2</p>
 </li>
-<li><p>[2] “BEAM DOMAIN OPTICAL WIRELESS COMMUNICATION METHOD AND SYSTEM”, 发明专利, 美国, US1139908B2</p>
+<li><p>[3] “LARGE-SCALE MIMO WIRELESS TRANSMISSION METHOD FOR MILLIMETER WAVE/TERAHERTZ NETWORKS”, 美国发明专利, 专利号: US11419068B2</p>
 </li>
-<li><p>[1] “SYSTEMS AND METHODS FOR WIRELESS COMMUNICATION WITH PER-BEAM SIGNAL SYNCHRONIZATION”, 发明专利, 美国, US10541850B2</p>
+<li><p>[2] “BEAM DOMAIN OPTICAL WIRELESS COMMUNICATION METHOD AND SYSTEM”, 美国发明专利, 专利号: US1139908B2</p>
+</li>
+<li><p>[1] “SYSTEMS AND METHODS FOR WIRELESS COMMUNICATION WITH PER-BEAM SIGNAL SYNCHRONIZATION”, 美国发明专利, 专利号: US10541850B2</p>
 </li>
 </ul>
 </td>
