--- a/publications.html
+++ b/publications.html
@@ -225,6 +225,8 @@
 <h2>Conference</h2>
 <h4>Year 2025</h4>
 <ul>
+<li><p>[C52] Y. Zhao, <b>L. You*</b>, J. Tang, M. Qian, B. Jiang, and X. Q. Gao, “Channel estimation in massive MIMO-OFDM with multi-group adjustable phase shift pilots,” in <b><i>Proc. IEEE VTC 2025 Spring</i></b>, Oslo, Norway, Jun. 2025, 1-6.</p>
+</li>
 <li><p>[C51] C. Xie, <b>L. You*</b>, Z. Jin, J. Tang, X. Q. Gao, and X.-G. Xia, “Channel fingerprints extrapolation via generative model for multi-band massive MIMO transmission,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
 </li>
 <li><p>[C50] Z. Jin, <b>L. You*</b>, X. Li, Z. Gao, Y. Liu, X.-G. Xia, and X. Q. Gao, “Ultra-grained channel fingerprint construction via conditional generative diffusion models,” in <b><i>Proc. IEEE INFOCOM 2025</i></b>, London, United Kingdom, May 2025, 1-6.</p>
