--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Email: lyou@seu.edu.cn <br />
 </td></tr></table>
 <h2>News</h2> 
 <p><ul>
-<li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用) <a href="https://www.comsoc.org/publications/best-readings/satellite-mega-constellations">[link]</a></p>
+<li><p>[<span class="statement">2025.03</span>]  Yu Zhao's paper on massive MIMO was accepted by IEEE VTC 2025 Spring. (赵宇的关于大规模MIMO的论文被2025 IEEE VTC Spring录用)</p>
 </li>
 <li><p>[<span class="statement">2025.03</span>]  Mengyu Qian and Huibin Zhou received the Student Travel Grant for IEEE WCNC 2025. (课题组潜梦羽和周慧斌获得IEEE WCNC 2025 Student Travel Grant奖项)</p>
 </li>
