--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,9 @@
 <h2>Journal</h2>
 <h4>Preprint</h4>
 <ul>
-<li><p>[P3] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, 2025.</p>
+<li><p>[P4] Q. Zhang, L. Xu, J. H. Huang, T. Yang, J. Jiao, Y. Wang, Y. Shi, C. Y. Zhang, X. J. Zhang, K. Zhang, Y. P. Gong, N. Deng, N. Zhao, Z. Gao, S. J. Han, X. D. Xu, <b>L. You</b>, D. M. Wang, S. Jiang, D. X. Zhao, N. Zhang, L. J. Hu, X. W. He, Y. H. Li, X. Q. Gao, and X. H. You, “Distributed satellite information networks: architecture, enabling technologies, and trends,” <b><i>Science China Information Sciences</i></b>, 2025.</p>
+</li>
+<li><p>[P3] J. Fang, Y. Liang, G. Sun, H. Hou, Y. Wang, <b>L. You</b>, and W. J. Wang*, “Polar-coded tensor-based unsourced random access with soft decoding,” <b><i>IEEE Transactions on Communications</i></b>, 2025. [<a href="https://ieeexplore.ieee.org/document/10938717">Full Paper</a>]</p>
 </li>
 <li><p>[P2] Y. M. Zhu, J. W. Zhuang, G. L. Sun, H. W. Hou, <b>L. You</b>, and W. J. Wang*, “Joint channel estimation and prediction for massive MIMO with frequency hopping sounding,” <b><i>IEEE Transactions on Communications</i></b>, 2024. [<a href="https://ieeexplore.ieee.org/document/10818554">Full Paper</a>]</p>
 </li>
@@ -123,7 +125,7 @@
 </li>
 <li><p>[J44] X. X. Niu, <b>L. You</b>, and X. Q. Gao*, “Coordinated multicast and unicast transmission in V2V underlay massive MIMO,” <b><i>Science China Information Sciences</i></b>, vol. 65, Article ID: 132305, Mar. 2022. [<a href="https://link.springer.com/article/10.1007/s11432-020-3233-2">Full Paper</a>]</p>
 </li>
-<li><p>[J43] K.-X. Li, <b>L. You</b>, J. Wang, X. Q. Gao*, C. G. Tsinos, S. Chatzinotas, and B. Ottersten, “Downlink transmit design for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, vol. 70, no. 2, pp. 1014-1028, Feb. 2022. [<a href="https://ieeexplore.ieee.org/document/9628071">Full Paper</a>]</p>
+<li><p>[J43] K.-X. Li, <b>L. You</b>, J. Wang, X. Q. Gao*, C. G. Tsinos, S. Chatzinotas, and B. Ottersten, “Downlink transmit design for massive MIMO LEO satellite communications,” <b><i>IEEE Transactions on Communications</i></b>, vol. 70, no. 2, pp. 1014-1028, Feb. 2022. <b>(Best Readings in Satellite Mega Constellations)</b> [<a href="https://ieeexplore.ieee.org/document/9628071">Full Paper</a>]</p>
 </li>
 </ul>
 <h4>Year 2021</h4>
@@ -169,7 +171,7 @@
 </li>
 <li><p>[J24] Y. Liu, C. Pan, <b>L. You</b>, and W. Han, “D2D-enabled user cooperation in massive MIMO,” <b><i>IEEE Systems Journal</i></b>, vol. 14, no. 3, pp. 4406-4417, Sep. 2020. [<a href="https://ieeexplore.ieee.org/document/8865622">Full Paper</a>]</p>
 </li>
-<li><p>[J23] <b>L. You</b>, K.-X. Li, J. Wang, X. Q. Gao*, X.-G. Xia, and B. Ottersten, “Massive MIMO transmission for LEO satellite communications,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 38, no. 8, pp. 1851-1865, Aug. 2020. <b>(Highly Cited Paper)</b> [<a href="https://ieeexplore.ieee.org/document/9110855">Full Paper</a>]</p>
+<li><p>[J23] <b>L. You</b>, K.-X. Li, J. Wang, X. Q. Gao*, X.-G. Xia, and B. Ottersten, “Massive MIMO transmission for LEO satellite communications,” <b><i>IEEE Journal on Selected Areas in Communications</i></b>, vol. 38, no. 8, pp. 1851-1865, Aug. 2020. <b>(Highly Cited Paper and Best Readings in Satellite Mega Constellations)</b> [<a href="https://ieeexplore.ieee.org/document/9110855">Full Paper</a>]</p>
 </li>
 <li><p>[J22] S. Li, Y. Liu*, <b>L. You</b>, W. J. Wang, H. Duan, and X. Li, “Covariance matrix reconstruction for DOA estimation in hybrid massive MIMO systems,” <b><i>IEEE Wireless Communications Letters</i></b>, vol. 9, no. 8, pp. 1196-1200, Aug. 2020. [<a href="https://ieeexplore.ieee.org/document/9052650">Full Paper</a>]</p>
 </li>
