--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@ Email: lyou@seu.edu.cn <br />
 <li><p>Space-Time Wireless Communications, Doctorate Level.<br />
 空时无线通信，博士</p>
 </li>
+<li><p>Measurement, Modeling, and Prediction of EMF Exposure, Doctorate Level.<br />
+电磁暴露的测量、建模和预测，博士</p>
+</li>
 </ul>
 <h2>Recruitment</h2>
 <p>课题组遵循因材施教的培养原则，根据学生的兴趣指导学生参与相应的工作，强调理论方法的研究深度和高度，注重对研究生实践能力的培养。课题组与国际名校保持密切合作，为优秀学生提供参加国际会议及联合培养等交流机会。所指导的研究生及本科生在国际权威期刊及会议上发表论文多篇，获得国家奖学金、中国通信学会优秀硕士学位论文、江苏省优秀硕士专业学位论文、研究生电子设计竞赛全国二等奖等多项奖励与荣誉。毕业研究生就业去向包括通信领域龙头企业，中电科、航天科工、国家电网等大型国企。</p>
